# Lighter-ROS-Message

./: .gitignore  CMakeLists.txt  README.md
cmg/: CMakeLists.txt  cmg.cpp  cmg.hpp  enviroment.hpp  message.hpp  node_handle.hpp  receiver.hpp  sender.hpp  socket.cpp  socket.hpp
cmg/core/: enviroment.hpp  environment.cpp  environment.hpp  node_handle.cpp  node_handle.hpp  receiver.hpp  sender.hpp  socket.cpp  socket.hpp  url.cpp  url.hpp
cmg/message/: codex.hpp  message.hpp
cmg/utils/: config.cpp  config.hpp  log.cpp  log.hpp  time.hpp
config/: baidu_cmg_gvins.json  cmg_gvins.json  cmg_gvins_docker.json  cmg_gvins_station.json  debug.json  docker.json  server_client.txt  station_android.txt  station_client.txt  test.json
messages/: CMakeLists.txt  StampedFloat64Array.cpp  StampedFloat64Array.hpp  foo_bar.cpp  foo_bar.hpp
messages/geometry_msgs/: point32.hpp
messages/nav_msgs/: Odometry.cpp  Odometry.hpp  Path.hpp
messages/protos/: CMakeLists.txt  nav_msgs.proto  std_msgs.proto
messages/sensor_msgs/: Image.cpp  Image.hpp  Imu.cpp  Imu.hpp  NavSatFix.cpp  NavSatFix.hpp  PointCloud.cpp  PointCloud.hpp
messages/std_msgs/: Array.cpp  Array.hpp  Bool.hpp  Header.hpp
src/: CMakeLists.txt
src/cmg/: cmg.cpp  cmg.hpp  enviroment.cpp  enviroment.hpp  messages.hpp  node_handle.cpp  node_handle.hpp  receiver.hpp  sender.hpp  socket.cpp  socket.hpp  url.cpp  url.hpp
src/messages/: StampedFloat64Array.cpp  StampedFloat64Array.hpp  codex.cpp  codex.hpp  foo_bar.cpp  foo_bar.hpp  message.hpp
src/messages/geometry_msgs/: point32.hpp
src/messages/nav_msgs/: Odometry.cpp  Odometry.h  Odometry.hpp
src/messages/sensor_msgs/: Image.cpp  Image.hpp  Imu.cpp  Imu.hpp  NavSatFix.cpp  NavSatFix.hpp  PointCloud.cpp  PointCloud.hpp
src/messages/std_msgs/: Header.hpp  bool.hpp
src/protos/: CMakeLists.txt  example.proto  geometry_msgs.proto  sensor_msgs.proto  std_msgs.proto
src/utils/: config.cpp  config.hpp  log.hpp  time.hpp
test/: CMakeLists.txt  arg_parse.hpp  pubsub_demo.cpp  pubsub_gather.cpp  pubsub_image.cpp  pubsub_odometry.cpp  pubsub_point_cloud.cpp
